--- a/css/common.css
+++ b/css/common.css
@@ -90,6 +90,68 @@ table {
     font-weight: 700;
 }
 
+.cj-btn-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.cj-btn {
+    margin: 30px 0;
+}
+
+.cj-btn span {
+    display: block;
+    width: 182px;
+    height: 52px;
+    color: #000;
+    background-color: #fff;
+    border-radius: 35px;
+    text-align: center;
+    line-height: 52px;
+    font-size: 17px;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    font-weight: 700;
+    font-family: 'Helvetica Neue Cyr Bold';
+}
+
+.cj-btn:hover {
+    text-decoration: none;
+}
+
+.cj-btn span:hover {
+    background-color: transparent;
+    color: #fff;
+}
+
+.cj-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    width: 190px;
+    height: 60px;
+    border-radius: 35px;
+    background: rgba(176, 0, 11, 1);
+    background: -moz-linear-gradient(left, rgba(176, 0, 11, 1) 0%, rgba(246, 41, 12, 1) 100%);
+    background: -webkit-linear-gradient(left, rgba(176, 0, 11, 1) 0%, rgba(246, 41, 12, 1) 100%);
+    background: -o-linear-gradient(left, rgba(176, 0, 11, 1) 0%, rgba(246, 41, 12, 1) 100%);
+    background: -ms-linear-gradient(left, rgba(176, 0, 11, 1) 0%, rgba(246, 41, 12, 1) 100%);
+    background: linear-gradient(to right, rgba(176, 0, 11, 1) 0%, rgba(246, 41, 12, 1) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(176, 0, 11, 1)), color-stop(100%, rgba(246, 41, 12, 1)));
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#b0000b', endColorstr='#f6290c', GradientType=1);
+}
+
+.shadow-wrapper {
+    -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    -moz-box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
+
 /*
 █████████████████████████████████████████████████████
 █────██────██────██───███████───██───██───██─████───█
@@ -205,7 +267,7 @@ table {
 .bottom-links-container {
     display: flex;
     justify-content: space-around;
-    padding: 0 5% 90px;
+    padding: 0 5% 180px;
 }
 
 .bottom-links-container a {
