--- a/css/projects.css
+++ b/css/projects.css
@@ -68,13 +68,19 @@
 
 @media all and (max-width: 767px) {
 
-    .project {
+    .projects-in-numbers .section-header {
+        margin: 0 5% 20px;
+    }
+
+    .col-sm-12.col-md-4.project {
         display: flex;
         justify-content: space-between;
         padding-bottom: 15px;
         padding-top: 15px;
         border-top: #e1dede solid 1px;
         width: 100%;
+        height: 100%;
+        margin: 0;
     }
 
     .project p {
@@ -85,6 +91,7 @@
         margin-bottom: 0;
         text-align: center;
         font-weight:100;
+        height: 25px;
     }
 
     .project h3 {
@@ -95,14 +102,22 @@
         margin-bottom: 0;
     }
 
+    .project-description {
+        display: inline-block;
+        line-height: 25px;
+        font-size: 17px;
+    }
+
     .middle-project-border {
         border-left: none;
         border-right: none;
     }
 
-    .partners-number-medium .achivment-amount {
+    .partners-number-medium .achivment-amount,
+    .partners-number-large .achivment-amount {
         font-size: 25px;
         height: 25px;
+        line-height: 25px;
     }
 
     ..partners-number-medium .achivment-amount .project-description {
