--- a/css/common.css
+++ b/css/common.css
@@ -58,6 +58,17 @@ table {
     border-spacing: 0;
 }
 
+.no-gutters {
+  margin-right: 0;
+  margin-left: 0;
+
+  > .col,
+  > [class*="col-"] {
+    padding-right: 0;
+    padding-left: 0;
+  }
+}
+
 #preloader {
     width: 100%; 
     height: 1000px; 
