--- a/css/footer.css
+++ b/css/footer.css
@@ -22,12 +22,14 @@
         margin:auto;
     }
 }
+
 .copyright{
     font-size: 16px;
     margin-bottom: 15px;
     color:#fff;
     text-align: center;
     opacity: 0.4;
+     font-family: 'Helvetica Neue Cyr Bold';
 }
 .social-links{
     display: flex;
