--- a/css/projects.css
+++ b/css/projects.css
@@ -16,30 +16,32 @@
 	margin: 0 5%;
 }
 
-.projects-wrapper.row {
-	margin: 0;
+.projects-wrapper {
 	padding: 0 5%;
 }
 
-
+.partners-number-medium {
+   font-size: 80px;
+}
 .partners-number-medium .achivment-amount {
-	font-size: 80px;
+
 }
 
 .partners-number-large .achivment-amount {
 	font-size: 100px;
 }
 
-.col-sm-12.col-md-4.project {
-	padding: 0;
-	margin: 30px 0;
+.project {
+	margin-top: 30px;
+    margin-bottom: 30px;
 	height: 250px;
 	font-family: 'Helvetica Neue Cyr Bold';
 }
 
 .project h3 {
+    display: flex;
+    justify-content: center;
 	height: 80px;
-	line-height: 80px;
 	text-align: center;
 }
 
@@ -72,7 +74,11 @@
         margin: 0 5% 20px;
     }
 
-    .col-sm-12.col-md-4.project {
+    .projects-wrapper.row {
+        padding-left: calc(5% + 14px);
+    }
+
+    .project {
         display: flex;
         justify-content: space-between;
         padding-bottom: 15px;
@@ -100,6 +106,7 @@
         text-align: center;
         height: 25px;
         margin-bottom: 0;
+
     }
 
     .project-description {
@@ -113,14 +120,19 @@
         border-right: none;
     }
 
-    .partners-number-medium .achivment-amount,
-    .partners-number-large .achivment-amount {
-        font-size: 25px;
+    .partners-number-medium .achivment-amount {
+        font-size: 17px;
         height: 25px;
         line-height: 25px;
     }
 
-    ..partners-number-medium .achivment-amount .project-description {
+    .partners-number-large .achivment-amount {
+        height: 25px;
+        line-height: 25px;
+        font-size: 25px;
+    }
+
+    .partners-number-medium .achivment-amount .project-description {
         display: inline-block;
         font-size: 19px;
         height: 25px;
@@ -143,6 +155,21 @@
 █─█████─█─███────██────██───██────███─███───███████─█████─██─██─█─████─███─██─██───██─█─███───█
 ███████████████████████████████████████████████████████████████████████████████████████████████
 */
+
+.projects-partners .cj-container {
+    padding: 0 5% 180px;
+    margin: auto;
+}
+
+.projects-clients-slider-wraper {
+    height: 100px;
+    width: 100%;    
+}
+.slider-clients {
+
+}
+
+
 
 /*
 ████████████████████████████████████████████████████████████████████████████████████████
