--- a/css/home.css
+++ b/css/home.css
@@ -108,7 +108,7 @@
 }
 
 .icon-scroll {
-    bottom: 5%;
+    bottom: 15px;
     margin-top: -25px;
     margin-left: -20px;
     box-shadow: inset 0 0 0 1px #acafb1;
