--- a/css/common.css
+++ b/css/common.css
@@ -172,8 +172,14 @@ table {
 */
 
 .page-title {
+    margin-top: 100px;
     height: 500px;
     width: 100%;
+}
+
+.about-title-bg {
+    background: url('../img/about-title-bg.jpg')100% 72% no-repeat;
+    background-size: cover; 
 }
 
 .page-title .cj-container {
@@ -191,15 +197,22 @@ table {
     color: #fff;
     font-size: 38px;
     font-family: 'Helvetica Neue Cyr Bold';
-    margin-left: 5%;
+    margin-left: 15px;
     margin-right: 5%;
-    margin-bottom: 50px;
+    margin-bottom: 180px;
+    padding-left: 3%;
 }
 
 .page-titke-overlay {
     background-color: rgba(0, 0, 0, 0.6);
     height: 500px;
     width: 100%;
+}
+
+@media all and (max-width: 1400px){
+    .page-title h1 {
+        margin-left: 5%;
+    }
 }
 
 /*
@@ -213,11 +226,13 @@ table {
 */
 
 .breadcrumbs {
-    padding-left: 5%;
-    padding-right: 5%;
-    background-color: #fff;
+    background-color: #fcfcfc;
     margin-bottom: 0;
     height: 100px;
+    padding-left: 3%;
+    padding-right: 3%;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .breadcrumbs li {
@@ -234,8 +249,12 @@ table {
     text-decoration: none;
 }
 
+.breadcrumbs li:last-child a {
+    color: #999;
+}
+
 .breadcrumbs li a:after {
-    content: '';
+    content: "";
     position: absolute;
     background: url('../img/breadcrump-arrow-right.png');
     -webkit-background-size: 100%;
@@ -253,10 +272,13 @@ table {
 
 @media all and (max-width: 1400px){
     .breadcrumbs {
-        margin-left: 5%;
-        margin-right: 5%;
+        padding-left: 3%;
+        padding-right: 5%;
+        margin-left: 50px;
+        margin-right: 50px;
     }
 }
+
 
 /*
 ████████████████████████████████████████████████████████████████████
@@ -271,12 +293,13 @@ table {
 .bottom-links .cj-container {
     padding-left: 0;
     margin:auto;
+    background-color: #fcfcfc;
 }
 
 .bottom-links-container {
     display: flex;
     justify-content: space-around;
-    padding: 0 5% 180px;
+    padding: 120px 5%;
 }
 
 .bottom-links-container a {
