--- a/css/common.css
+++ b/css/common.css
@@ -69,6 +69,10 @@ table {
   }
 }
 
+.background-color-grey {
+    background-color: #fcfcfc !important;
+}
+
 #preloader {
     width: 100%; 
     height: 1000px; 
@@ -261,7 +265,7 @@ table {
     background-size: 100%;
     display: block;
     width: 11px;
-    top: 2px;
+    top: 0;
     right: -23px;
     height: 10px;
 }
@@ -293,7 +297,6 @@ table {
 .bottom-links .cj-container {
     padding-left: 0;
     margin:auto;
-    background-color: #fcfcfc;
 }
 
 .bottom-links-container {
