--- a/css/common.css
+++ b/css/common.css
@@ -305,21 +305,46 @@ table {
     padding: 120px 5%;
 }
 
-.bottom-links-container a {
+.link-item-wrapper {
+    height: 300px;
+    width: 45%;
+    overflow: hidden;
+}
+
+.link-item-wrapper a {
     display: block;
+    position: absolute;
     height: inherit;
     width: 100%;
     line-height: 300px;
     text-align: center;
-    background-color: rgba( 0, 0, 0, 0.5);
     font-size: 40px;
     color: #fff;
     font-family: 'Helvetica Neue Cyr Bold';
+    text-transform: uppercase;
+      -moz-transition: all 2s ease-out;
+    -o-transition: all 2s ease-out;
+    -webkit-transition: all 2s ease-out;
+    transition: all 2s ease-out;
+}
+
+.bottom-links-container a span {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: inherit;
+    background-color: rgba( 0, 0, 0, 0.5);
+    z-index: 2;
 }
 
 .bottom-links-container a img {
     display: inline-block;
-    margin-bottom: -18px;
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
 }
 
 .bottom-links-container a:hover {
@@ -327,31 +352,20 @@ table {
     color: #fff;
 }
 
-.bottom-links-container a img.left-bottom-link-arrow{
-      -moz-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    -webkit-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    transform: rotate(180deg);
-    margin-bottom: -15px;
+.link-item-wrapper a:hover{
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
 }
 
-.services-link,
-.projects-link,
-.about-link {
-    height: 300px;
-    width: 45%;
-    background-blend-mode: multiply;
-    -webkit-background-size: cover;
-    background-size: cover;
-}
+
 
 .services-link {
-    background: url('../img/sistema-de-gestao.png') 100% 100%;
+    background-image: url('../img/DSC_3272.jpg');
 }
 
 .projects-link {
-    background: url('../img/global-business.jpg') 100% 100%;
+    background-image: url('../img/DSC_3244.jpg');
 }
 
 .about-link {
