--- a/css/common.css
+++ b/css/common.css
@@ -182,7 +182,12 @@ table {
 }
 
 .about-title-bg {
-    background: url('../img/about-title-bg.jpg')100% 72% no-repeat;
+    background: url('../img/pages/about-title-bg.jpg')100% 72% no-repeat;
+    background-size: cover; 
+}
+
+.services-title-bg {
+    background: url('../img/pages/DSC_3272.jpg')100% 59% no-repeat;
     background-size: cover; 
 }
 
@@ -284,6 +289,7 @@ table {
 }
 
 
+
 /*
 ████████████████████████████████████████████████████████████████████
 █────███────██───██───██────██─███──██████─████───██─██─██─██─██───█
@@ -306,6 +312,7 @@ table {
 }
 
 .link-item-wrapper {
+    position: relative;
     height: 300px;
     width: 45%;
     overflow: hidden;
