--- a/css/about.css
+++ b/css/about.css
@@ -10,7 +10,6 @@
 */
 
 .about-description .cj-container {
-	padding: 0 5%;
 	height: inherit;
 	padding-top: 100px;
 	padding-bottom: 60px;
@@ -27,7 +26,7 @@
 }
 
 .about-description-main-text h2 {
-	margin-bottom: 20px;
+	margin-bottom: 30px;
     font-size: 28px;
     height: 18px;
     line-height: 20px;
@@ -46,7 +45,6 @@
 }
 
 .about-description article {
-	margin-left: 20px;
 	margin-right: 20px;
 	text-align: justify;
 	font-size: 17px;
@@ -64,6 +62,10 @@
 
 .about-description-text p {
 	text-align: left;
+}
+
+.about-description-options {
+	padding: 0 calc(5% + 20px);
 }
 
 
