--- a/css/services.css
+++ b/css/services.css
@@ -11,18 +11,19 @@
 */
 
 .services-description .cj-container{
-    margin:auto;
-    padding: 100px 15% 0;
-    font-family: 'HELVETICAMEDIUM';
+	margin:auto;
+	padding: 100px 15% 0;
+	font-family: 'HELVETICAMEDIUM';
+
 }
 
 .services-description h2 {
-	margin-bottom: 20px;
-    font-size: 28px;
-    height: 18px;
-    line-height: 20px;
-    font-weight: 700;
-    text-align: center;
+	margin-bottom: 30px;
+	font-size: 28px;
+	height: 18px;
+	line-height: 20px;
+	font-weight: 700;
+	text-align: center;
 }
 
 .services-description-text {
@@ -58,6 +59,56 @@
 }
 
 /*
+██████████████████████████
+█───██───██───██────██───█
+█─█████─███─████─██─██─███
+█───███─███───██────██───█
+███─███─███─████─███████─█
+█───███─███───██─█████───█
+██████████████████████████
+*/
+.services-steps .cj-container {
+	margin:auto;
+	padding: 100px 0 0;
+	background-color: #fff;
+	font-family: 'HELVETICAMEDIUM';
+}
+
+.services-moto {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	line-height: 26px;
+	padding: 0 10%;
+}
+
+.services-moto hr {
+	display: block;
+	width: 15%;
+	margin: auto;
+	background-color: #000;
+	padding: 0;
+	margin: 0;
+}
+
+.services-moto p {
+	text-align: center;
+	padding: 20px 15%;
+	line-height: 24px;
+	font-size: 16px;
+	color: #000;
+	font-size: 20px;
+	line-height: 30px;
+	font-weight: 100;
+	font-family: sans-serif;
+}
+
+.services-steps .steps-img img{
+	width: 100%;
+}
+
+/*
 ███████████████████████████████████████████████████████████████████████████
 █────██───██─██─██───██────███████───██───██────██─█─██───██────██───██───█
 █─██─███─███─██─██─████─██─███████─████─████─██─██─█─███─███─██─██─████─███
@@ -69,11 +120,17 @@
 
 .ather-services .cj-container {
 	margin: auto;
-	padding: 100px 15% 0;
+	padding: 100px 5% 0;
+	font-family: 'HELVETICAMEDIUM';
 }
 
-.ather-services-wrapper{
+.ather-services .section-header {
+	margin: 0 0 60px;
+}
+
+.ather-services-wrapper {
 	height: inherit;
+	padding: 0 15%;
 }
 
 .service-container {
@@ -88,17 +145,17 @@
 	padding: 10px 20px 30px;
 	border: 1px #ccc solid;
 	-webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-    background-color: rgba(252, 252, 252, 1);
+	-moz-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+	background-color: rgba(252, 252, 252, 1);
 }
 
 .sevice-wrapper:hover {
 	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    -moz-box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    background-color: rgba(241, 244, 246, 1);
+	-moz-box-shadow: 0 0 10px rgba(0,0,0,0.5);
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+	background-color: rgba(241, 244, 246, 1);
 }
 
 .sevice-wrapper {
@@ -109,9 +166,14 @@
 
 .sevice-wrapper h2 {
 	font-size: 20px;
-    line-height: 20px;
-    padding: 20px 0;
-    text-align: center;
+	line-height: 20px;
+	padding: 20px 0;
+	text-align: center;
+	color: rgba(101, 133, 152, 1);
+}
+
+.sevice-wrapper:hover h2 {
+	color: rgba(227, 8, 8, 1);
 }
 
 .sevice-wrapper p {
@@ -137,24 +199,197 @@
 	font-size: 14px;
 }
 
-/*
-█████████████████████████████████████████████████████████
-█────██────██─██─██────███───██───██───██────██─██─██───█
-█─██─██─██─██──█─██─██──███─████─████─███─██─██──█─██─███
-█─█████─██─██─█──██─██──███─████─████─███─██─██─█──██───█
-█─██─██─██─██─██─██─██──███─████─████─███─██─██─██─████─█
-█────██────██─██─██────███───███─███───██────██─██─██───█
-█████████████████████████████████████████████████████████
-*/
 
-.services-conditions .cj-container { 
-	margin:auto;
-    padding: 100px 5% 0;
-    font-family: 'HELVETICAMEDIUM';
+
+/*
+██████████████████████████████████████████████████████████████████████████████████████████████████████████████████
+█────██────██────████──██───██────██───██───███████───██─██─███████─██─██─█─██────███─███──█────███───██────██───█
+█─██─██─██─██─██─█████─██─████─██─███─███─██████████─███──█─███████──█─██─█─██─██──██──█───█─██──██─████─██─██─███
+█────██────██─██─█████─██───██─██████─███───██───███─███─█──██───██─█──██─█─██────███─█─█──█────███───██────██───█
+█─█████─█─███─██─██─██─██─████─██─███─█████─████████─███─██─███████─██─██─█─██─██──██─███──█─██──██─████─█─█████─█
+█─█████─█─███────██────██───██────███─███───███████───██─██─███████─██─██───██────███─███──█────███───██─█─███───█
+██████████████████████████████████████████████████████████████████████████████████████████████████████████████████
+*/
+.projects-in-numbers .cj-container {
+	padding: 100px 0;
+	margin: auto;
 }
 
-.conditions-main-description p {
-	line-height: 26px;
+.projects-in-numbers .section-header {
+	margin: 0 5% 60px;
+}
+
+.projects-wrapper {
+	padding: 0 5%;
+}
+
+.partners-number-medium {
+	font-size: 80px;
+}
+.partners-number-medium .achivment-amount {
+
+}
+
+.partners-number-large .achivment-amount {
+	font-size: 100px;
+}
+
+.project {
+	margin-top: 30px;
+	margin-bottom: 30px;
+	height: 250px;
+	font-family: 'Helvetica Neue Cyr Bold';
+}
+
+.project h3 {
+	display: flex;
+	justify-content: center;
+	height: 80px;
 	text-align: center;
-	padding: 0 8% 20px;
+}
+
+.project p {
+	text-align: center;
+}
+
+.project-description {
+	display: block;
+	font-size: 38px;
+	height: 70px;
+	line-height: 70px;
+}
+
+.middle-project-border {
+	border-left: 1px #e1dede solid;
+	border-right: 1px #e1dede solid;
+}
+
+.partners-number-gradient {
+	background: linear-gradient(90deg, #b0010b 50%, #b0010b 50%, #f8292d);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	color: #f8292d;
+}
+
+@media all and (max-width: 767px) {
+
+	.projects-in-numbers .section-header {
+		margin: 0 5% 20px;
+	}
+
+	.projects-wrapper.row {
+		padding-left: calc(5% + 14px);
+	}
+
+	.project {
+		display: flex;
+		justify-content: space-between;
+		padding-bottom: 15px;
+		padding-top: 15px;
+		border-top: #e1dede solid 1px;
+		width: 100%;
+		height: 100%;
+		margin: 0;
+	}
+
+	.project p {
+		display: inline-block;
+		font-family: sans-serif;
+		font-size: 19px;
+		line-height: 25px;
+		margin-bottom: 0;
+		text-align: center;
+		font-weight:100;
+		height: 25px;
+	}
+
+	.project h3 {
+		font-size: 17px;
+		line-height: 25px;
+		text-align: center;
+		height: 25px;
+		margin-bottom: 0;
+	}
+
+	.project-description {
+		display: inline-block;
+		line-height: 25px;
+		font-size: 17px;
+	}
+
+	.middle-project-border {
+		border-left: none;
+		border-right: none;
+	}
+
+	.partners-number-medium .achivment-amount {
+		font-size: 17px;
+		height: 25px;
+		line-height: 25px;
+	}
+
+	.partners-number-large .achivment-amount {
+		height: 25px;
+		line-height: 25px;
+		font-size: 25px;
+	}
+
+	.partners-number-medium .achivment-amount .project-description {
+		display: inline-block;
+		font-size: 19px;
+		height: 25px;
+		font-family: sans-serif;
+		font-weight: 100;
+	}
+
+	.project:last-child {
+		border-bottom: #e1dede solid 1px;
+	}
+
+}
+
+
+/*
+█████████████████████████████████████████████
+█────██────██────██───██─██─██───██────██───█
+█─██─██─██─██─██─███─███──█─██─████─██─██─███
+█────██────██────███─███─█──██───██────██───█
+█─█████─██─██─█─████─███─██─██─████─█─█████─█
+█─█████─██─██─█─████─███─██─██───██─█─███───█
+█████████████████████████████████████████████
+*/
+
+.services-partners .cj-container {
+	padding: 0 5%;
+	margin:auto; 
+}
+
+.services-partners .section-header {
+	margin-bottom: 60px;
+}
+
+.services-partners .owl-dots {
+	display: flex;
+	justify-content: center;
+	margin-top: 35px;
+}
+
+.services-partners .owl-dot{
+	background-color: #999 !important;
+	width: 10px;
+	height: 10px;
+	margin: 0 7px;
+	border-radius: 30px;
+}
+
+.services-partners .owl-dot:focus {
+	outline:0;
+}
+
+.services-partners .owl-carousel {
+	width: 90%;
+}
+
+.services-partners button.owl-dot.active{
+	background-color: #222 !important;
 }
