--- a/css/common.css
+++ b/css/common.css
@@ -37,7 +37,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
     background-color: #FAFAFA !important;
-    font-family: sans-serif;
+    font-family: 'Jaldi', sans-serif;
 }
 
 ol, ul {
@@ -102,7 +102,8 @@ table {
     height: 18px;
     line-height: 20px;
     border-left: 4px #e30808 solid;
-    font-family: 'Helvetica Neue Cyr Bold';
+    /*font-family: 'Helvetica Neue Cyr Bold';*/
+    font-weight: 700;
 }
 
 .cj-btn-container {
@@ -129,7 +130,7 @@ table {
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
-    font-family: 'Helvetica Neue Cyr Bold';
+    /*font-family: 'Helvetica Neue Cyr Bold';*/
 }
 
 .cj-btn:hover {
@@ -157,6 +158,7 @@ table {
     background: linear-gradient(to right, rgba(176, 0, 11, 1) 0%, rgba(246, 41, 12, 1) 100%);
     background: -webkit-gradient(left top, right top, color-stop(0%, rgba(176, 0, 11, 1)), color-stop(100%, rgba(246, 41, 12, 1)));
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#b0000b', endColorstr='#f6290c', GradientType=1);
+    font-weight: 700;
 }
 
 .shadow-wrapper {
@@ -211,11 +213,12 @@ table {
     background-color: transparent;
     color: #fff;
     font-size: 38px;
-    font-family: 'Helvetica Neue Cyr Bold';
+    /*font-family: 'Helvetica Neue Cyr Bold';*/
     margin-left: 15px;
     margin-right: 5%;
     margin-bottom: 180px;
     padding-left: 3%;
+    font-weight: 700;
 }
 
 .page-titke-overlay {
@@ -260,7 +263,7 @@ table {
     position: relative;
     font-size: 12px;
     color: #000;
-    font-family: 'Helvetica Neue Cyr Bold';
+    /*font-family: 'Helvetica Neue Cyr Bold';*/
     text-decoration: none;
 }
 
@@ -333,7 +336,7 @@ table {
     text-align: center;
     font-size: 40px;
     color: #fff;
-    font-family: 'Helvetica Neue Cyr Bold';
+    /*font-family: 'Helvetica Neue Cyr Bold';*/
     text-transform: uppercase;
       -moz-transition: all 2s ease-out;
     -o-transition: all 2s ease-out;
