--- a/css/header.css
+++ b/css/header.css
@@ -58,7 +58,7 @@
 .header-navigation a{
 	/*font-family: 'Helvetica Neue Cyr Bold';*/
 	font-family: 'Jaldi', sans-serif;
-	font-weight: 700;
+	font-size: 18px;
 }
 
 .header-languages{
