--- a/css/home.css
+++ b/css/home.css
@@ -308,7 +308,7 @@
 }
 
 .home-about-us {
-    font-family: 'HELVETICAMEDIUM';
+    /*font-family: 'HELVETICAMEDIUM';*/
     font-weight: 500;
     font-size: 17px;
     text-align: justify;
@@ -443,7 +443,7 @@
 }
 
 .project-item p {
-    font-family: 'Helvetica Neue Cyr Bold';
+    /*font-family: 'Helvetica Neue Cyr Bold';*/
     font-size: 70px;
     line-height: 60px;
     margin-bottom: 0;
@@ -492,7 +492,7 @@ p.partners-number-medium {
     }
 
     .project-item p {
-        font-family: 'Helvetica Neue Cyr Bold';
+        /*font-family: 'Helvetica Neue Cyr Bold';*/
         font-size: 100px;
         height: 120px;
         line-height: 70px;
@@ -522,7 +522,7 @@ p.partners-number-medium {
 }
 
 .success-ico-color {
-    font-family: 'Helvetica Neue Cyr Bold';
+    /*font-family: 'Helvetica Neue Cyr Bold';*/
     background: linear-gradient(90deg, #b0010b 50%, #b0010b 50%, #f8292d);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -530,7 +530,7 @@ p.partners-number-medium {
 }
 
 .project-item h3 {
-    font-family: 'Helvetica Neue Cyr Bold';
+    /*font-family: 'Helvetica Neue Cyr Bold';*/
     font-size: 17px;
     line-height: 80px;
     margin-bottom: 0;
@@ -558,7 +558,7 @@ p.partners-number-medium {
 
     .project-item p {
         display: inline-block;
-        font-family: sans-serif;
+        /*font-family: sans-serif;*/
         font-size: 19px;
         line-height: 25px;
         margin-bottom: 0;
@@ -602,7 +602,7 @@ p.partners-number-medium {
         display: inline-block;
         font-size: 19px;
         height: 25px;
-        font-family: sans-serif;
+        /*font-family: sans-serif;*/
         font-weight: 100;
     }
 
@@ -649,7 +649,7 @@ p.partners-number-medium {
     padding-top: 30px;
     padding-bottom: 30px;
     cursor: pointer;
-     font-family: 'Helvetica Neue Cyr Bold';
+     /*font-family: 'Helvetica Neue Cyr Bold';*/
 }
 
 .news-item-header {
@@ -667,7 +667,7 @@ p.partners-number-medium {
     width: 100px;
     color: #fff;
     padding: 5px 7px;
-    font-family: 'Helvetica Neue Cyr Bold';
+    /*font-family: 'Helvetica Neue Cyr Bold';*/
     border-radius: 25px;
     font-size: 13px;
     text-align: center;
@@ -677,7 +677,7 @@ p.partners-number-medium {
     height: 36px;
     line-height: 29px;
     text-align: start;
-    font-family: 'Helvetica Neue Cyr Bold';
+    /*font-family: 'Helvetica Neue Cyr Bold';*/
     font-size: 13px;
     font-weight: 700;
     width: 60%;
